# investr

./: LICENSE  README.md  pyproject.toml
investr/: run.py
investr/common/: mortgage.py
investr/views/: __init__.py  cagr.py  combined_mortages.py  combined_mortgages.py  combined_mortgages_depr.py  realestate.py  register.py  regular.py  template.py
